fix footer bg overflow issue

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -234,6 +234,7 @@ footer {
   width: 100%;
   height: 300px;
   padding-top: 20px;
+  overflow: hidden;
   background: radial-gradient(ellipse at center, rgba(#000, 0) 0%, rgba(#000, 1) 80%),
               linear-gradient(to top, #0072ff 0%, #4e18a6 60%), #000;
 
